# manabot

./: .gitignore  .gitmodules  Dockerfile  README.md  environment.yml  pyproject.toml
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/agents/: action.h
engine/src/cardsets/alpha/: alpha.cpp  alpha.h
engine/src/cardsets/basics/: basic_lands.h
engine/src/graphics/: game_display.cpp
engine/src/rules/: game.h  mana.cpp  mana.h  player.cpp
engine/src/rules/zones/: stack.cpp  zone.cpp
engine/tests/rules/engine/: test_mana.cpp
manabot/conf/: attention.yaml  aws.yaml  config.yaml  local.yaml  simple.yaml
manabot/data/: README.md  __init__.py  observation.py  representation.py
manabot/env/: __init__.py  config.py  data.py  env.py  match.py  observation.py  reward.py  test_data.py  vector_env.py
manabot/eval/: evaluate.py
manabot/infra/: __init__.py  experiment.py  hypers.py  log.py  perf.py  profiler.py
manabot/ppo/: __init__.py  agent.py  experiment.py  hypers.py  model.py  reward.py  trainer.py
manabot/scripts/: train.py
manabot/scripts/conf/: config.yaml
manabot/sim/: player.py  sim.py
managym/: README.md
managym/src/agents/: action.cpp
managym/src/cardsets/: card_registry.cpp  card_registry.h
managym/src/cardsets/basics/: basic_lands.cpp
managym/src/rules/: card.cpp  card.h  game.cpp  player.h
managym/src/turns/: priority.cpp
managym/src/zones/: battlefield.cpp  battlefield.h  stack.h  zone.h
managym/tests/: testing_env.cpp
tests/data/: test_data.py  test_observation.py  test_representation.py
tests/env/: test_data.py  test_env.py  test_observation.py
tests/infra/: test_perf.py  test_profiler.py
tests/ppo/: README.md  plan.md  test_agent.py  test_trainer.py
