[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manabot"
version = "0.1.0"
description = "Reinforcement Learning agent for Magic: The Gathering"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["manabot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]